[package]
name = "wumpus-webhook"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["tippfehlr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
